--- a/Quiz.html
+++ b/Quiz.html
@@ -163,7 +163,7 @@ label:focus-within {
         <ul>
             <li><a href="/SamDutton-13.github.io/wdtm.html">Usage</a></li>
             <li><a href="#">Quiz</a></li>
-            <li><a href="/SamDutton-13.github.io/Homepage.html">Home</a></li>
+            <li><a href="/SamDutton-13.github.io/index.html">Home</a></li>
         </ul>
     </div>
 
