--- a/wdtm.html
+++ b/wdtm.html
@@ -142,7 +142,7 @@
     <ul>
       <li><a href="#">Usage</a></li>
       <li><a href="/SamDutton-13.github.io/Quiz.html">Quiz</a></li>
-      <li><a href="/SamDutton-13.github.io/Homepage.html">Home</a></li>
+      <li><a href="/SamDutton-13.github.io/index.html">Home</a></li>
     </ul>
 </div>
 
