--- a/index.html
+++ b/index.html
@@ -135,24 +135,30 @@
     <div class="circleShadow"></div>
     <div class="circle"></div>
     <h1 align="left">PageRank</h1>
-    <p align="left"><b>What is PageRank?</b><br>PageRank is an algorithm developed by <a href="https://en.wikipedia.org/wiki/Larry_Page">Larry Page</a> and <a href="https://en.wikipedia.org/wiki/Sergey_Brin">Sergey Brin</a>, founders of Google, to help users find more relevant and important information more easily. Using a combination of mathematical ideas such as graph theory, and linear algebra alongside more simple concepts like probability.</p>
+    <p style="font-size:20px" align="left">Technology is so heavily infused in our daily lives and information can be found easily by just using search engines like google, yahoo etc, typing in keywords and the relevant details will be displayed. But how do they operate ?<br><br>
+        <b>What is PageRank?</b><br><br>
+        PageRank is an algorithm developed by <a href="https://en.wikipedia.org/wiki/Larry_Page">Larry Page</a> and <a href="https://en.wikipedia.org/wiki/Sergey_Brin">Sergey Brin</a>, founders of Google, to help users find more relevant and important information more easily. Using a combination of mathematical ideas such as graph theory, and linear algebra alongside more simple concepts like probability. <br><br>
+        <b>History</b><br><br>
+        In 1996, as part of a Stanford University research project, the founders of google developed this algorithm. This means the patent was registered to the university and not Google; for use of this patent, Stanford University received 1.8 million <a href="https://finance.yahoo.com/quote/GOOGL?.tsrc=fin-srch">shares of Google</a>.
+        With influences from <a href="https://en.wikipedia.org/wiki/Eugene_Garfield">Eugene Garfield</a> in the 1950s and <a href=https://en.wikipedia.org/wiki/Massimo_Marchiori">Massimo Marchiori</a> later, this algorithm has deep-seated roots in mathematics that have been understood for a very long time.
+    </p>
 </div>
 
 <div>
     <ul>
-      <li><a href="/SamDutton-13.github.io/wdtm.html">Usage</a></li>
-      <li><a href="/SamDutton-13.github.io/Quiz.html">Quiz</a></li>
+      <li><a href="wdtm.html">Usage</a></li>
+      <li><a href="Quiz.html">Quiz</a></li>
       <li><a href="#">Home</a></li>
     </ul>
 </div>
 
 <div>
-    <div class="container">me when talkiing wrods are hard to write this fast when you havee no clue what you are writing i should be paying attention in real analysis but here i am doing not that oh well this should be enought text me when talkiing wrods are hard to write this fast when you havee no clue what you are writing i should be paying attention in real analysis but here i am doing not that oh well this should be enought text me when talkiing wrods are hard to write this fast when you havee no clue what you are writing i should be paying attention in real analysis but here i am doing not that oh well this should be enought text</div>
+    <div class="container">PageRank can be confusing with all the intricacies that make up such an advanced algorithm, but a good place to start will always be some key facts and definitions:</div>
 </div>
 
-<!--needs a section like splitters/ pannels with some words inside-->
+<!--needs a section like splitters/ panels with some words inside-->
 <div>
-    <div class="box1">What kind of scale does PageRank use? <br><br><br> PageRank uses a logarithmic scale from 0-10 to score to pages rather than a linear scale. PageRank and this score can be found in the toolbar of the browser if the required Google extensions are installed.</div>
+    <div class="box1">What kind of scale does PageRank use? <br><br><br> PageRank uses a logarithmic scale from 0-10 to score to pages rather than a linear scale. PageRank and this score could previously be found in the toolbar of the browser with the required Google extensions.</div>
     <div class="box1">What is a Backlink? <br><br><br>A backlink of a page is a link that is directed to it from any other page. For example, a page A has a link to page B, then B has a backlink from A. These links are the more important type when calculating the PageRank score. </div>
     <div class="box1">What structure do the links from pages make? <br><br><br> When considering pages and links, PageRank forms a network with the pages as nodes and links as weighted edges. This forms a network in the mathematical sense that is studied in graph theory.</div>
 </div>
