--- a/wdtm.html
+++ b/wdtm.html
@@ -135,14 +135,26 @@
     <div class="circleShadow"></div>
     <div class="circle"></div>
     <h1 align="left">What does this mean?</h1>
-    <p align="left"></p>
+    <p align="left">Have you ever thought about why certain web pages appear higher in search results than others? What would be PageRank's contribution be to obtain this result? <br><br>
+    A few examples woud be:<br>
+        &#8226; Internal link optimisation - they signal the more important and relevant results to your Google search.<br>
+        &#8226; Display links in a more eye-catching way by the use of unique fonts and bolder texts resulting in a higher probability of users clicking on them<br><br>
+    Are there any strategies website owners could use to improve their Pagerank score? <br>
+        &#8226;Increase the loading speed of the website<br>
+        &#8226;Include snippets and site links making the website look more clickable<br>
+        &#8226;Content partnerships - allowing the website content to reach a larger audience.<br><br>
+    Are there any instances where PageRank produces unexpected results, what reasons might have caused this?<br>
+    Page rank could vary based on individual experiences, however, some website owners would employ black hat SEO techniques to artificially inflate their PageRank. Some of those techniques include cloaking, link farms, and keyword stuffing to mislead search engine algorithms and artificially boost a webpage's ranking.<br>
+    SEO - search engine optimisation - a procedure that manipulates website characteristics and links to higher the ranking of their PageRank score. <br>
+    The Black Hat techniques are tools utilised by some website owners that violate the guidelines (Webmaster) set by the major search engines, for example, Google and Yahoo.
+    </p>
 </div>
 
 <div>
     <ul>
       <li><a href="#">Usage</a></li>
-      <li><a href="/SamDutton-13.github.io/Quiz.html">Quiz</a></li>
-      <li><a href="/SamDutton-13.github.io/index.html">Home</a></li>
+      <li><a href="Quiz.html">Quiz</a></li>
+      <li><a href="index.html">Home</a></li>
     </ul>
 </div>
 
