--- a/Quiz.html
+++ b/Quiz.html
@@ -161,9 +161,9 @@ label:focus-within {
 
     <div>
         <ul>
-            <li><a href="/SamDutton-13.github.io/wdtm.html">Usage</a></li>
+            <li><a href="wdtm.html">Usage</a></li>
             <li><a href="#">Quiz</a></li>
-            <li><a href="/SamDutton-13.github.io/index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
         </ul>
     </div>
 
