--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 
 <div>
     <ul>
-      <li><a href="wdtm.html">Usage</a></li>
-      <li><a href="Quiz.html">Quiz</a></li>
+      <li><a href="https://samdutton-13.github.io/SamDutton-13.github.io/wdtm.html">Usage</a></li>
+      <li><a href="https://samdutton-13.github.io/SamDutton-13.github.io/Quiz.html">Quiz</a></li>
       <li><a href="#">Home</a></li>
     </ul>
 </div>
