--- a/wdtm.html
+++ b/wdtm.html
@@ -153,8 +153,8 @@
 <div>
     <ul>
       <li><a href="#">Usage</a></li>
-      <li><a href="https://samdutton-13.github.io/SamDutton-13.github.io/Quiz.html">Quiz</a></li>
-      <li><a href="https://samdutton-13.github.io/SamDutton-13.github.io/index.html">Home</a></li>
+      <li><a href="https://SamDutton-13.github.io/InsideGoogle/Quiz.html">Quiz</a></li>
+      <li><a href="https://SamDutton-13.github.io/InsideGoogle/index.html">Home</a></li>
     </ul>
 </div>
 
