--- a/Quiz.html
+++ b/Quiz.html
@@ -162,7 +162,7 @@ label:focus-within {
     <div>
         <ul>
             <li><a href="https://SamDutton-13.github.io/InsideGoogle/wdtm.html">Usage</a></li>
-            <li><a href="#">Quiz</a></li>
+            <li><a href="https://SamDutton-13.github.io/InsideGoogle/Quiz.html">Quiz</a></li>
             <li><a href="https://SamDutton-13.github.io/InsideGoogle/index.html">Home</a></li>
         </ul>
     </div>
