--- a/index.html
+++ b/index.html
@@ -146,9 +146,11 @@
 
 <div>
     <ul>
-      <li><a href="https://SamDutton-13.github.io/InsideGoogle/wdtm.html">Usage</a></li>
-      <li><a href="https://SamDutton-13.github.io/InsideGoogle/Quiz.html">Quiz</a></li>
-      <li><a href="#">Home</a></li>
+
+            <li><a href="https://SamDutton-13.github.io/InsideGoogle/wdtm.html">Usage</a></li>
+            <li><a href="https://SamDutton-13.github.io/InsideGoogle/Quiz.html">Quiz</a></li>
+            <li><a href="https://SamDutton-13.github.io/InsideGoogle/index.html">Home</a></li>
+
     </ul>
 </div>
 
