--- a/wdtm.html
+++ b/wdtm.html
@@ -151,11 +151,11 @@
 </div>
 
 <div>
-    <ul>
-      <li><a href="#">Usage</a></li>
-      <li><a href="https://SamDutton-13.github.io/InsideGoogle/Quiz.html">Quiz</a></li>
-      <li><a href="https://SamDutton-13.github.io/InsideGoogle/index.html">Home</a></li>
-    </ul>
+<ul>
+            <li><a href="https://SamDutton-13.github.io/InsideGoogle/wdtm.html">Usage</a></li>
+            <li><a href="https://SamDutton-13.github.io/InsideGoogle/Quiz.html">Quiz</a></li>
+            <li><a href="https://SamDutton-13.github.io/InsideGoogle/index.html">Home</a></li>
+        </ul>
 </div>
 
 
