--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
     <h1 align="left">PageRank</h1>
     <p style="font-size:20px" align="left">Technology is so heavily infused in our daily lives and information can be found easily by just using search engines like google, yahoo etc, typing in keywords and the relevant details will be displayed. But how do they operate ?<br><br>
         <b>What is PageRank?</b><br><br>
-        PageRank is an algorithm developed by <a href="https://en.wikipedia.org/wiki/Larry_Page">Larry Page</a> and <a href="https://en.wikipedia.org/wiki/Sergey_Brin">Sergey Brin</a>, founders of Google, to help users find more relevant and important information more easily. Using a combination of mathematical ideas such as graph theory, and linear algebra alongside more simple concepts like probability. <br><br>
+        PageRank is an algorithm developed by <a  style="text-decoration:none" href="https://en.wikipedia.org/wiki/Larry_Page">Larry Page</a> and <a style="text-decoration:none" href="https://en.wikipedia.org/wiki/Sergey_Brin">Sergey Brin</a>, founders of Google, to help users find more relevant and important information more easily. Using a combination of mathematical ideas such as graph theory, and linear algebra alongside more simple concepts like probability. <br><br>
         <b>History</b><br><br>
-        In 1996, as part of a Stanford University research project, the founders of google developed this algorithm. This means the patent was registered to the university and not Google; for use of this patent, Stanford University received 1.8 million <a href="https://finance.yahoo.com/quote/GOOGL?.tsrc=fin-srch">shares of Google</a>.
-        With influences from <a href="https://en.wikipedia.org/wiki/Eugene_Garfield">Eugene Garfield</a> in the 1950s and <a href=https://en.wikipedia.org/wiki/Massimo_Marchiori">Massimo Marchiori</a> later, this algorithm has deep-seated roots in mathematics that have been understood for a very long time.
+        In 1996, as part of a Stanford University research project, the founders of google developed this algorithm. This means the patent was registered to the university and not Google; for use of this patent, Stanford University received 1.8 million <a style="text-decoration:none" href="https://finance.yahoo.com/quote/GOOGL?.tsrc=fin-srch">shares of Google</a>.
+        With influences from <a style="text-decoration:none" href="https://en.wikipedia.org/wiki/Eugene_Garfield">Eugene Garfield</a> in the 1950s and <a style="text-decoration:none" href=https://en.wikipedia.org/wiki/Massimo_Marchiori">Massimo Marchiori</a> later, this algorithm has deep-seated roots in mathematics that have been understood for a very long time.
     </p>
 </div>
 
