--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           background:transparent;
         }
     </style>
-    <!---<link rel="stylesheet" href="css/style.css">--->
+    <!---<link rel="stylesheet" href="css/style.css"> mad typing is happening herre--->
 </head>
 
 <body>
@@ -146,11 +146,9 @@
 
 <div>
     <ul>
-
-            <li><a href="https://SamDutton-13.github.io/InsideGoogle/wdtm.html">Usage</a></li>
-            <li><a href="https://SamDutton-13.github.io/InsideGoogle/Quiz.html">Quiz</a></li>
-            <li><a href="https://SamDutton-13.github.io/InsideGoogle/index.html">Home</a></li>
-
+        <li><a href="https://SamDutton-13.github.io/InsideGoogle/wdtm.html">Usage</a></li>
+        <li><a href="https://SamDutton-13.github.io/InsideGoogle/Quiz.html">Quiz</a></li>
+        <li><a href="https://SamDutton-13.github.io/InsideGoogle/index.html">Home</a></li>
     </ul>
 </div>
 
