--- a/wdtm.html
+++ b/wdtm.html
@@ -136,7 +136,7 @@
     <div class="circle"></div>
     <h1 align="left">What does this mean?</h1>
     <p align="left">Have you ever thought about why certain web pages appear higher in search results than others? What would be PageRank's contribution be to obtain this result? <br><br>
-    A few examples woud be:<br>
+    A few examples would be:<br>
         &#8226; Internal link optimisation - they signal the more important and relevant results to your Google search.<br>
         &#8226; Display links in a more eye-catching way by the use of unique fonts and bolder texts resulting in a higher probability of users clicking on them<br><br>
     Are there any strategies website owners could use to improve their Pagerank score? <br>
