--- a/wdtm.html
+++ b/wdtm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PageRank Website</title>
     <style>
         body {
@@ -144,7 +144,7 @@
         &#8226;Include snippets and site links making the website look more clickable<br>
         &#8226;Content partnerships - allowing the website content to reach a larger audience.<br><br>
     Are there any instances where PageRank produces unexpected results, what reasons might have caused this?<br>
-    Page rank could vary based on individual experiences, however, some website owners would employ black hat SEO techniques to artificially inflate their PageRank. Some of those techniques include cloaking, link farms, and keyword stuffing to mislead search engine algorithms and artificially boost a webpage's ranking.<br>
+    PageRank could vary based on individual experiences, however, some website owners would employ black hat SEO techniques to artificially inflate their PageRank. Some of those techniques include cloaking, link farms, and keyword stuffing to mislead search engine algorithms and artificially boost a webpage's ranking.<br>
     SEO - search engine optimisation - a procedure that manipulates website characteristics and links to higher the ranking of their PageRank score. <br>
     The Black Hat techniques are tools utilised by some website owners that violate the guidelines (Webmaster) set by the major search engines, for example, Google and Yahoo.
     </p>
