--- a/Quiz.html
+++ b/Quiz.html
@@ -39,7 +39,7 @@ ul {
           padding-top:14px;
           padding-right: 8vw;
           text-decoration: none;
-          text-size: 30px;
+          text-size: 1em;
           border-radius: 30%;
         }
 
