--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           padding-top:20px;
           padding-right: 8vw;
           text-decoration: none;
-          text-size: 30px;
+          text-size: 1em;
           border-radius: 30%;
         }
 
