--- a/wdtm.html
+++ b/wdtm.html
@@ -37,7 +37,7 @@
           padding-top:20px;
           padding-right: 8vw;
           text-decoration: none;
-          text-size: 1em;
+          font-size: 0.75em;
           border-radius: 30%;
         }
 
