--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PageRank Website</title>
+    <!---<link rel="stylesheet" href="css/style.css"> mad typing is happening herre--->
     <style>
         body {
             text-align: center;
@@ -28,7 +29,6 @@
           float: right;
 
         }
-
         li a {
           zIndex: 100;
           display: block;
@@ -37,10 +37,12 @@
           padding-top:20px;
           padding-right: 8vw;
           text-decoration: none;
-          font-size: 0.75em;
           border-radius: 30%;
         }
 
+        @ media (pointer:none), ( pointer:coarse){
+                  font-size: 0.75em;
+                  }
         li a:hover {
           color: black;
         }
@@ -126,7 +128,6 @@
           background:transparent;
         }
     </style>
-    <!---<link rel="stylesheet" href="css/style.css"> mad typing is happening herre--->
 </head>
 
 <body>
