--- a/wdtm.html
+++ b/wdtm.html
@@ -37,9 +37,13 @@
           padding-top:20px;
           padding-right: 8vw;
           text-decoration: none;
-          font-size: 0.75em;
+
           border-radius: 30%;
         }
+
+        @ media (pointer:none), ( pointer:coarse){
+                  font-size: 0.75em;
+                  }
 
         li a:hover {
           color: black;
