--- a/Quiz.html
+++ b/Quiz.html
@@ -39,9 +39,13 @@ ul {
           padding-top:14px;
           padding-right: 8vw;
           text-decoration: none;
-          font-size: 0.75em;
+
           border-radius: 30%;
         }
+
+        @ media (pointer:none), ( pointer:coarse){
+                  font-size: 0.75em;
+                  }
 
         li a:hover {
           color: black;
