--- a/Quiz.html
+++ b/Quiz.html
@@ -43,10 +43,12 @@ ul {
           border-radius: 30%;
         }
 
-        @ media (pointer:none), ( pointer:coarse){
-                li a {
-                  font-size: 0.5em;
-                  }
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  li a{
+    font-size:0.7em ;
+  }
+}
                }
         li a:hover {
           color: black;
