--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
           text-decoration: none;
           border-radius: 30%;
         }
-        @ media (pointer:none), ( pointer:coarse){
-                li a {
-                  font-size: 0.5em;
-                  }
-               }
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  li a{
+    font-size:0.7em ;
+  }
+}
         li a:hover {
           color: black;
         }
