--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         PageRank is an algorithm developed by <a  style="text-decoration:none" href="https://en.wikipedia.org/wiki/Larry_Page">Larry Page</a> and <a style="text-decoration:none" href="https://en.wikipedia.org/wiki/Sergey_Brin">Sergey Brin</a>, founders of Google, to help users find more relevant and important information more easily. Using a combination of mathematical ideas such as graph theory, and linear algebra alongside more simple concepts like probability. <br><br>
         <b>History</b><br><br>
         In 1996, as part of a Stanford University research project, the founders of google developed this algorithm. This means the patent was registered to the university and not Google; for use of this patent, Stanford University received 1.8 million <a style="text-decoration:none" href="https://finance.yahoo.com/quote/GOOGL?.tsrc=fin-srch">shares of Google</a>.
-        With influences from <a style="text-decoration:none" href="https://en.wikipedia.org/wiki/Eugene_Garfield">Eugene Garfield</a> in the 1950s and <a style="text-decoration:none" href=https://en.wikipedia.org/wiki/Massimo_Marchiori">Massimo Marchiori</a> later, this algorithm has deep-seated roots in mathematics that have been understood for a very long time.
+        With influences from <a style="text-decoration:none" href="https://en.wikipedia.org/wiki/Eugene_Garfield">Eugene Garfield</a> in the 1950s and <a style="text-decoration:none" href="https://en.wikipedia.org/wiki/Massimo_Marchiori">Massimo Marchiori</a> later, this algorithm has deep-seated roots in mathematics that have been understood for a very long time.
     </p>
 </div>
 
