--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             padding-left: 10vw;
             padding-right: 100vw;
             padding-bottom: 15px;
+            margin-bottom:35px;
             width: 77.5vw;
 
         display: inline-block;
@@ -100,7 +101,7 @@
             height: 22.5vw;
 
             font-size: 1.25vw;
-            margin-top: 85px;
+            margin-top: 35px;
             margin-left: 1.8%;
             margin-right: 1.8%;
             padding: 18px 18px 18px 18px;
@@ -156,7 +157,15 @@
 </div>
 
 <div>
-    <div class="container">PageRank can be confusing with all the intricacies that make up such an advanced algorithm, but a good place to start will always be some key facts and definitions:</div>
+    <div class="container">PageRank can be confusing with all the intricacies that make up such an advanced algorithm, but a good place to start will always be an explanation in simple terms, (courtesy of Udacity) followed by some key facts and definitions:</div>
+</div>
+
+<div class="box2"></div>
+
+
+
+<div>
+    <iframe width="100%" height="400" src="https://www.youtube.com/embed/IKXvSKaI2Ko?controls=0"></iframe>
 </div>
 
 <!--needs a section like splitters/ panels with some words inside-->
@@ -165,7 +174,6 @@
     <div class="box1">What is a Backlink? <br><br><br>A backlink of a page is a link that is directed to it from any other page. For example, a page A has a link to page B, then B has a backlink from A. These links are the more important type when calculating the PageRank score. </div>
     <div class="box1">What structure do the links from pages make? <br><br><br> When considering pages and links, PageRank forms a network with the pages as nodes and links as weighted edges. This forms a network in the mathematical sense that is studied in graph theory.</div>
 </div>
-
-<div class="box2"></div>
+    <div class="box2"></div>
 </body>
 </html>
