--- a/wdtm.html
+++ b/wdtm.html
@@ -152,6 +152,9 @@
     SEO - search engine optimisation - a procedure that manipulates website characteristics and links to higher the ranking of their PageRank score. <br>
     The Black Hat techniques are tools utilised by some website owners that violate the guidelines (Webmaster) set by the major search engines, for example, Google and Yahoo.
     </p>
+    <p align="left">
+        Taking this into account, the SEO starter guide was recently re-written. This is discussed in Google's podcast: <a style="text-decoration: none" href="https://search-off-the-record.libsyn.com/rewriting-the-seo-starter-guide">"Search Off the Record"</a>, where you can learn about the newer methods that Google suggests for aspiring businesses and online creators.
+    </p>
 </div>
 
 <div>
