--- a/wdtm.html
+++ b/wdtm.html
@@ -153,7 +153,9 @@
     The Black Hat techniques are tools utilised by some website owners that violate the guidelines (Webmaster) set by the major search engines, for example, Google and Yahoo.
     </p>
     <p align="left">
-        Taking this into account, the SEO starter guide was recently re-written. This is discussed in Google's podcast: <a style="text-decoration: none" href="https://search-off-the-record.libsyn.com/rewriting-the-seo-starter-guide">"Search Off the Record"</a>, where you can learn about the newer methods that Google suggests for aspiring businesses and online creators.
+        Taking this into account, the SEO starter guide was recently re-written. This is discussed in one of Google's recent podcast epsiodes:
+        <br><audio controls><source src="../Audio/SOTR068_v4-lowres.mp3" type="audio/mpeg"></audio><br>
+        The full series can be found at: <a style="text-decoration: none" href="https://search-off-the-record.libsyn.com/rewriting-the-seo-starter-guide">"Search Off the Record"</a>, where you can learn about the newer methods that Google suggests for aspiring businesses and online creators.
     </p>
 </div>
 
